// Copyright 2022 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.feature;
option go_package = "github.com/bucketeer-io/bucketeer/proto/feature";

import "google/protobuf/wrappers.proto";

import "proto/feature/command.proto";
import "proto/feature/feature.proto";
import "proto/feature/evaluation.proto";
import "proto/user/user.proto";
import "proto/feature/segment.proto";

message GetFeatureRequest {
  string id = 1;
  string environment_namespace = 2;
}

message GetFeatureResponse {
  Feature feature = 1;
}

message GetFeaturesRequest {
  string environment_namespace = 1;
  repeated string ids = 2;
}

message GetFeaturesResponse {
  repeated Feature features = 1;
}

message ListFeaturesRequest {
  enum OrderBy {
    DEFAULT = 0;
    NAME = 1;
    CREATED_AT = 2;
    UPDATED_AT = 3;
    TAGS = 4;
    ENABLED = 5;
  }
  enum OrderDirection {
    ASC = 0;
    DESC = 1;
  }
  int64 page_size = 1;
  string cursor = 2;
  repeated string tags = 3;
  OrderBy order_by = 4;
  OrderDirection order_direction = 5;
  string environment_namespace = 6;
  string maintainer = 7;
  google.protobuf.BoolValue enabled = 8;
  google.protobuf.BoolValue has_experiment = 9;
  string search_keyword = 10;
  google.protobuf.BoolValue archived = 11;
  google.protobuf.BoolValue has_prerequisites = 12;
}

message ListFeaturesResponse {
  repeated Feature features = 1;
  string cursor = 2;
  int64 total_count = 3;
}

message ListEnabledFeaturesRequest {
  int64 page_size = 1;
  string cursor = 2;
  repeated string tags = 3;
  string environment_namespace = 4;
}

message ListEnabledFeaturesResponse {
  repeated Feature features = 1;
  string cursor = 2;
}

message CreateFeatureRequest {
  CreateFeatureCommand command = 1;
  string environment_namespace = 2;
}

message CreateFeatureResponse {}

message EnableFeatureRequest {
  string id = 1;
  EnableFeatureCommand command = 2;
  string environment_namespace = 3;
  string comment = 4;
}

message EnableFeatureResponse {}

message DisableFeatureRequest {
  string id = 1;
  DisableFeatureCommand command = 2;
  string environment_namespace = 3;
  string comment = 4;
}

message DisableFeatureResponse {}

message ArchiveFeatureRequest {
  string id = 1;
  ArchiveFeatureCommand command = 2;
  string environment_namespace = 3;
  string comment = 4;
}

message ArchiveFeatureResponse {}

message UnarchiveFeatureRequest {
  string id = 1;
  UnarchiveFeatureCommand command = 2;
  string environment_namespace = 3;
  string comment = 4;
}

message UnarchiveFeatureResponse {}

message DeleteFeatureRequest {
  string id = 1;
  DeleteFeatureCommand command = 2;
  string environment_namespace = 3;
  string comment = 4;
}

message DeleteFeatureResponse {}

message UpdateFeatureDetailsRequest {
  string id = 1;
  RenameFeatureCommand rename_feature_command = 2;
  ChangeDescriptionCommand change_description_command = 3;
  repeated AddTagCommand add_tag_commands = 4;
  repeated RemoveTagCommand remove_tag_commands = 5;
  string environment_namespace = 6;
  string comment = 7;
}

message UpdateFeatureDetailsResponse {}

message UpdateFeatureVariationsRequest {
  string id = 1;
  repeated Command commands = 2;
  string environment_namespace = 3;
  string comment = 4;
}

message UpdateFeatureVariationsResponse {}

message UpdateFeatureTargetingRequest {
  string id = 1;
  repeated Command commands = 2;
  string environment_namespace = 3;
  string comment = 4;
}

message UpdateFeatureTargetingResponse {}

message CloneFeatureRequest {
  string id = 1;
  CloneFeatureCommand command = 2;
  string environment_namespace = 3;
}

message CloneFeatureResponse {}

message CreateSegmentRequest {
  CreateSegmentCommand command = 1;
  string environment_namespace = 2;
}

message CreateSegmentResponse {
  Segment segment = 1;
}

message GetSegmentRequest {
  string id = 1;
  string environment_namespace = 2;
}

message GetSegmentResponse {
  Segment segment = 1;
}

message ListSegmentsRequest {
  enum OrderBy {
    DEFAULT = 0;
    NAME = 1;
    CREATED_AT = 2;
    UPDATED_AT = 3;
  }
  enum OrderDirection {
    ASC = 0;
    DESC = 1;
  }
  int64 page_size = 1;
  string cursor = 2;
  string environment_namespace = 3;
  OrderBy order_by = 4;
  OrderDirection order_direction = 5;
  string search_keyword = 6;
  google.protobuf.Int32Value status = 7;
  google.protobuf.BoolValue is_in_use_status = 8;
}

message ListSegmentsResponse {
  repeated Segment segments = 1;
  string cursor = 2;
  int64 total_count = 3;
}

message DeleteSegmentRequest {
  string id = 1;
  DeleteSegmentCommand command = 2;
  string environment_namespace = 3;
}

message DeleteSegmentResponse {}

message UpdateSegmentRequest {
  string id = 1;
  repeated Command commands = 2;
  string environment_namespace = 3;
}

message UpdateSegmentResponse {}

message AddSegmentUserRequest {
  string id = 1;
  AddSegmentUserCommand command = 2;
  string environment_namespace = 3;
}

message AddSegmentUserResponse {}

message DeleteSegmentUserRequest {
  string id = 1;
  DeleteSegmentUserCommand command = 2;
  string environment_namespace = 3;
}

message DeleteSegmentUserResponse {}

message GetSegmentUserRequest {
  string segment_id = 1;
  string user_id = 2;
  SegmentUser.State state = 3;
  string environment_namespace = 4;
}

message GetSegmentUserResponse {
  SegmentUser user = 1;
}

message ListSegmentUsersRequest {
  int64 page_size = 1;
  string cursor = 2;
  string segment_id = 3;
  google.protobuf.Int32Value state = 4;
  string user_id = 5;
  string environment_namespace = 6;
}

message ListSegmentUsersResponse {
  repeated SegmentUser users = 1;
  string cursor = 2;
}

message BulkUploadSegmentUsersRequest {
  string environment_namespace = 1;
  string segment_id = 2;
  BulkUploadSegmentUsersCommand command = 3;
}

message BulkUploadSegmentUsersResponse {}

message BulkDownloadSegmentUsersRequest {
  string environment_namespace = 1;
  string segment_id = 2;
  SegmentUser.State state = 3;
}

message BulkDownloadSegmentUsersResponse {
  bytes data = 1;  // segment user ids separated by new line
}

message EvaluateFeaturesRequest {
  bucketeer.user.User user = 1;
  string environment_namespace = 2;
  string tag = 3;
  string feature_id = 4;  // it will evaluate a single feature if set
}

message EvaluateFeaturesResponse {
  bucketeer.feature.UserEvaluations user_evaluations = 1;
}

message GetUserEvaluationsRequest {
  string environment_namespace = 1;
  string tag = 2;
  string user_id = 3;
}

message GetUserEvaluationsResponse {
  repeated bucketeer.feature.Evaluation evaluations = 1;
}

message UpsertUserEvaluationRequest {
  string environment_namespace = 1;
  string tag = 2;
  bucketeer.feature.Evaluation evaluation = 3;
}

message ListTagsRequest {
  enum OrderBy {
    DEFAULT = 0;
    ID = 1;
    CREATED_AT = 2;
    UPDATED_AT = 3;
  }
  enum OrderDirection {
    ASC = 0;
    DESC = 1;
  }
  string environment_namespace = 1;
  int64 page_size = 2;
  string cursor = 3;
  OrderBy order_by = 4;
  OrderDirection order_direction = 5;
  string search_keyword = 6;
}

message ListTagsResponse {
  repeated Tag tags = 1;
  string cursor = 2;
  int64 total_count = 3;
}

message UpsertUserEvaluationResponse {}

service FeatureService {
  rpc GetFeature(GetFeatureRequest) returns (GetFeatureResponse) {}
  rpc GetFeatures(GetFeaturesRequest) returns (GetFeaturesResponse) {}
  rpc ListFeatures(ListFeaturesRequest) returns (ListFeaturesResponse) {}
  rpc ListEnabledFeatures(ListEnabledFeaturesRequest)
      returns (ListEnabledFeaturesResponse) {}
  rpc CreateFeature(CreateFeatureRequest) returns (CreateFeatureResponse) {}
  rpc EnableFeature(EnableFeatureRequest) returns (EnableFeatureResponse) {
    option deprecated = true;
  }
  rpc DisableFeature(DisableFeatureRequest) returns (DisableFeatureResponse) {
    option deprecated = true;
  }
  rpc ArchiveFeature(ArchiveFeatureRequest) returns (ArchiveFeatureResponse) {}
  rpc UnarchiveFeature(UnarchiveFeatureRequest)
      returns (UnarchiveFeatureResponse) {}
  rpc DeleteFeature(DeleteFeatureRequest) returns (DeleteFeatureResponse) {}
  rpc UpdateFeatureDetails(UpdateFeatureDetailsRequest)
      returns (UpdateFeatureDetailsResponse) {}
  rpc UpdateFeatureVariations(UpdateFeatureVariationsRequest)
      returns (UpdateFeatureVariationsResponse) {}
  rpc UpdateFeatureTargeting(UpdateFeatureTargetingRequest)
      returns (UpdateFeatureTargetingResponse) {}
  rpc CloneFeature(CloneFeatureRequest) returns (CloneFeatureResponse) {}

  rpc CreateSegment(CreateSegmentRequest) returns (CreateSegmentResponse) {}
  rpc GetSegment(GetSegmentRequest) returns (GetSegmentResponse) {}
  rpc ListSegments(ListSegmentsRequest) returns (ListSegmentsResponse) {}
  rpc DeleteSegment(DeleteSegmentRequest) returns (DeleteSegmentResponse) {}
  rpc UpdateSegment(UpdateSegmentRequest) returns (UpdateSegmentResponse) {}

  rpc AddSegmentUser(AddSegmentUserRequest) returns (AddSegmentUserResponse) {
    option deprecated = true;
  }
  rpc DeleteSegmentUser(DeleteSegmentUserRequest)
      returns (DeleteSegmentUserResponse) {
    option deprecated = true;
  }
  rpc GetSegmentUser(GetSegmentUserRequest) returns (GetSegmentUserResponse) {
    option deprecated = true;
  }
  rpc ListSegmentUsers(ListSegmentUsersRequest)
      returns (ListSegmentUsersResponse) {}
  rpc BulkUploadSegmentUsers(BulkUploadSegmentUsersRequest)
      returns (BulkUploadSegmentUsersResponse) {}
  rpc BulkDownloadSegmentUsers(BulkDownloadSegmentUsersRequest)
      returns (BulkDownloadSegmentUsersResponse) {}
  rpc EvaluateFeatures(EvaluateFeaturesRequest)
      returns (EvaluateFeaturesResponse) {}
  rpc GetUserEvaluations(GetUserEvaluationsRequest)
      returns (GetUserEvaluationsResponse) {}
  rpc UpsertUserEvaluation(UpsertUserEvaluationRequest)
      returns (UpsertUserEvaluationResponse) {}
  rpc ListTags(ListTagsRequest) returns (ListTagsResponse) {}
}
